--- a/compose.yml
+++ b/compose.yml
@@ -2,8 +2,18 @@ services:
   app:
     build: .
     volumes:
-      - .:/app
+      - ./:/app
     ports:
-      - "8080:8080"
+      - 8080:8080
     environment:
       PORT: 8080
+  db:
+    image: postgres
+    volumes:
+      - ./todo.sql:/docker-entrypoint-initdb.d/todo.sql
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=todo
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=todo
