--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,7 @@ services:
       - DB_USER=user
       - DB_PASSWORD=password
       - DB_NAME=app
+    command: ["flask", "run", "-h", "0.0.0.0", "-p", "8080", "--debug"]
   db:
     image: postgres
     volumes:
@@ -21,3 +22,4 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=app
+    command: ["postgres", "-c", "log_statement=all"]
