--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
       - DB_NAME=app
     command: ["flask", "run", "-h", "0.0.0.0", "-p", "8080", "--debug"]
   db:
-    image: postgres
+    image: postgres:17
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
